# jax_lob_sim

./: .gitignore  README.md  code_base.md  main.py  pyproject.toml
script/: assignment_JAX.ipynb  data_process.ipynb  data_process_l2.ipynb  download.ipynb  mle.ipynb
src/estimate/: preprocess_l2.py  preprocess_l3.py
