[project]
name = "jax-lob-sim"
version = "0.1.0"
description = "Limit order book simulator — Noble, Rosenbaum, Souilmi (2026)"
requires-python = ">=3.12, <3.13"

dependencies = [
    # ── JAX ecosystem ──────────────────────────────────────────────────────
    # jaxlib must match jax exactly. The CPU wheel is installed here;
    # see Step 4 for the CUDA/TPU override.
    "jax>=0.7.0",
    "jaxlib>=0.7.0",

    # JAX utility libraries
    "chex==0.1.91",          # dataclasses that register as JAX pytrees
    "flax==0.12.7",          # alternative struct.dataclass; NNX for RL
    "optax==0.2.8",          # gradient-based optimisation (RL training)

    # ── Gymnax ─────────────────────────────────────────────────────────────
    # gymnax 0.0.9 is the latest release and targets jax 0.4.x.
    # If gymnax releases a 0.1.x with jax 0.5+ support, update both together.
    "gymnax==0.0.9",

    # ── Estimation pipeline (offline, NumPy/SciPy) ─────────────────────────
    "numpy>=1.26,<2.1",       # jax 0.4.35 requires numpy <2.1
    "scipy>=1.13,<2.0",
    "scikit-learn==1.8.0",    # GaussianMixture for GMM timing fit

    # ── Data I/O ───────────────────────────────────────────────────────────
    "databento==0.75.0",      # Databento Python client for MBP-10 data
    "pandas==2.2.3",          # event dataframe processing
    "pyarrow==18.1.0",        # parquet read/write for processed events

    # ── Visualisation and notebooks ────────────────────────────────────────
    "matplotlib==3.9.4",
    "ipykernel==6.29.5",      # Jupyter kernel registration
]

[project.optional-dependencies]
# Install with:  uv sync --extra dev
dev = [
    "pytest==8.3.5",
    "pytest-xdist==3.6.1",   # parallel test execution
    "ruff==0.8.6",            # linter + formatter
    "pyright==1.1.391",       # static type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lob_sim"]

# ── ruff config ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]     # pycodestyle errors, pyflakes, isort

# ── pytest config ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"